--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "cd orbital-ui && npm install && npm run build"
-  publish = "orbital-ui/.next"
+  publish = "orbital-ui/out"
 
 [build.environment]
   NODE_VERSION = "20"
